Fix the wait condition
Signed-off-by: Neetha John <nejo@microsoft.com>

--- a/ansible/roles/test/tasks/ptf_runner_reboot.yml
+++ b/ansible/roles/test/tasks/ptf_runner_reboot.yml
@@ -149,5 +149,5 @@
 
 - name: Wait for the DUT to be ready for the next test
   pause: seconds=420
-  when: (preboot_list|length > 1) or
-        (inboot_list|length > 0 and 'None' not in inboot_list)
+  when: (preboot_list|length > 0 and None not in preboot_list) or
+          (inboot_list|length > 0 and None not in inboot_list)
